# stucco

./: .gitignore  CMakeLists.txt  README.md  package.xml  pyproject.toml  setup.py
meshes/wsg50/: wsg50_plate.stl
scripts/: collect_tracking_training_data.py  evaluate_contact_isolation.py  evaluate_contact_tracking.py  exploration_experiments.py  gp_shape_entropy.py  info_theoretic_exploration.py  merge_db_pkl.py  paper_generate_sdf_image.py  plot_contact_tracking_res.py  poking_main.py  real_robot_tmux_sessions_start.sh  registration_experiments.py  registration_real_experiments.py  registration_real_nonros_process_experiment.py  registration_real_process_experiments.py  retrieval_main.py  retrieval_real_main.py  run_many_real_registration_experiments.py  run_many_registration_experiments.py  run_toy_optimization_problem.py
src/stucco/: detection.py  tracking.py
stucco/: cfg.py  defines.py  detection.py  detection_impl.py  evaluation.py  exploration.py  icp.py  icp_costs.py  icp_sgd.py  movable_sdf.py  poking_controller.py  registration_util.py  retrieval_controller.py  sdf.py  serialization.py  svgd.py  tracking.py  util.py  voxel.py
stucco/baselines/: cluster.py  gmphd.py
stucco/bubble/: dataset.py
stucco/env/: arm.py  arm_real.py  env.py  poke.py  poke_real.py  poke_real_nonros.py  pybullet_env.py  pybullet_sim.py  real_env.py
stucco/env_getters/: arm.py  poke.py
stucco/experiments/: registration.py  registration_nopytorch3d.py
tests/: test_detection.py  test_pybullet_env.py  test_tracking.py
urdf/: wsg50_flipped.urdf  wsg50_flipped_inflated.urdf
(+24 files in other folders)
